# examples

./: README.md
.github/workflows/: bsf-multiarch-action.yaml  go-base.yaml  multiarch-action.yaml  python-base.yaml  python-pip.yaml  rust-base.yaml
demo-python/: bsf.hcl
demo-python/app/: app.py
go-server-example/: .gitignore  Dockerfile  README.Docker.md  README.md  bsf.hcl  compose.yaml  go.mod  go.sum  main.go
go-server-example/bsf/: flake.nix
go-server-example/bsf-result/: attestations.intoto.jsonl
go-server-example/static/: index.html
golang-example/: Dockerfile  bsf.hcl  main.go
golang-example/bsf/: flake.nix
golang-example/static/: index.html
python/: Dockerfile  README.md  bsf.hcl  pyproject.toml
python-pip/: Dockerfile  Dockerfile.non-hermetic  README.md  bsf.hcl  requirements.txt
python-pip/app/: app.py
python-pip/bsf/: flake.nix
python/app/: app.py
python/bsf/: default.nix  flake.nix
ruby-server-example/: Dockerfile  Gemfile  README.md  bsf.hcl  main.rb
ruby-server-example/bsf/: flake.nix
rust/: .dockerignore  Cargo.toml  Dockerfile  README.md  bsf.hcl
rust/.cargo/: config.toml
rust/bsf/: Cargo.nix  default.nix  flake.nix
rust/src/: main.rs
